--- a/basic/src/app/book/list/list.component.html
+++ b/basic/src/app/book/list/list.component.html
@@ -8,7 +8,7 @@
             <div class="btn-group">
               <button type="button" class="btn btn-sm btn-outline-secondary">Buy</button>
             </div>
-            <small class="text-muted">Price: {{ book.price }}</small>
+            <small class="text-muted">Price: {{ book.price | bookPrice }}</small>
           </div>
         </div>
       </div>
